testsuite/tests/grammar/invalid_token_rule/common.lkt
import lexer_example

@abstract class FooNode implements Node[FooNode] {
}

class Example : FooNode {
}
